--- a/app/globals.css
+++ b/app/globals.css
@@ -129,3 +129,14 @@
 .cl-internal-11ewti4 {
   border: 2px solid white;
 }
+
+.glassmorphism {
+  background: rgba(255, 255, 255, 0.25);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+}
+.glassmorphism2 {
+  background: rgba(18, 17, 17, 0.25);
+  backdrop-filter: blur(8px);
+  -webkit-backdrop-filter: blur(8px);
+}
